k8s-manifests/admin-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service           # Updated deployment name
  namespace: shital-ns
  labels:
    app: admin-service
spec:
  replicas: 1                   # Updated replicas
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
      - name: admin-container
        image: 230027225622.dkr.ecr.us-east-1.amazonaws.com/shital-ns/admin-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: shital-ns
spec:
  selector:
    app: admin-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: shital-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /admin/actuator/health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8080
