k8s-manifests/enn-ecommerce-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enn-ecommerce-app
  namespace: shital-ns
  labels:
    app: enn-ecommerce-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enn-ecommerce-app
  template:
    metadata:
      labels:
        app: enn-ecommerce-app
    spec:
      containers:
        - name: enn-ecommerce-container
          image: 230027225622.dkr.ecr.us-east-1.amazonaws.com/shital-ns/enn-ecommerce-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: enn-ecommerce-app
  namespace: shital-ns
spec:
  selector:
    app: enn-ecommerce-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enn-ecommerce-ingress
  namespace: shital-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enn-ecommerce-app
                port:
                  number: 80
